name:                prox
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/rvion/prox#readme
license:             BSD3
license-file:        LICENSE
author:              rvion
maintainer:          vion.remi@gmail.com
copyright:           x
category:            x
build-type:          Simple
cabal-version:       >=1.10

executable prox
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Opts
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , http-reverse-proxy
                     , optparse-applicative
                     , conduit-extra
                     , conduit
                     , bytestring
                     , warp
                     , http-client
                     , pretty-show
                     , pretty
